# libdeflate-rsx

./: .gitignore  Cargo.toml  README.md  bench.txt  bench_output.txt  bench_result_baseline.txt  bench_result_full.txt  bench_result_optimized.txt  bench_result_optimized_3.txt  bench_result_optimized_5.txt  bench_result_optimized_8.txt  fix.patch
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
benches/: bench_main.rs  bench_parallel_opt.rs  encoder_perf.rs
examples/: batch_processing.rs  checksums.rs  compression_basics.rs  gzip_zlib.rs  manual_bench.rs  stream_compression.rs
scripts/: gen_bench_files.py
src/: api.rs  batch.rs  batch_cuda.rs  common.rs  crc32_tables.rs  lib.rs  stream.rs
src/adler32/: arm.rs  mod.rs  x86.rs
src/compress/: bitstream.rs  huffman_comp.rs  matchfinder.rs  matchfinder_test_snippet.rs  mod.rs
src/crc32/: arm.rs  mod.rs  x86.rs
src/cuda/: compress.cu
src/decompress/: mod.rs  mod.rs.orig  mod.rs.rej  tables.rs  test_oob.rs  x86.rs
tests/: adler32_overflow.rs  batch_test.rs  bitstream_boundary.rs  bitstream_test.rs  buffer_size_test.rs  offset_tests.rs  parallel_test.rs  repro_fail.rs  reuse_decompressor.rs  security_limit.rs  security_oom.rs  security_oom_panic.rs  security_overlap_test.rs  security_state_reset.rs  stream_test.rs  unit_tests.rs
